--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   hi i work
 <script>
-  window.location.assign("/lists");
+  window.location.assign("https://itch.io");
 </script>
 </html>
